# moving-averages

./: NEWS  README.md  moving-averages.cabal
src/Data/: MovingAverage.hs
src/Data/MovingAverage/: DoubleExponential.hs  Simple.hs  SingleExponential.hs  Types.hs
test/Data/MovingAverage/: DoubleExponentialSpec.hs  SimpleSpec.hs  SingleExponentialSpec.hs
test/Test/: TestHelper.hs
