name:                moving-averages
version:             0.1.0.0
homepage:            https://github.com/joshuaclayton/moving-averages#readme
license:             MIT
license-file:        LICENSE
author:              Josh Clayton
maintainer:          sayhi@joshuaclayton.me
copyright:           2017
category:            Mathematics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.MovingAverage
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  other-modules:       Data.MovingAverage.Simple
                     , Data.MovingAverage.SingleExponential
                     , Data.MovingAverage.Types

test-suite moving-averages-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , moving-averages
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joshuaclayton/moving-averages
